compil/projet/projet-20210420/src/fr/ubordeaux/deptinfo/compilation/lea/parser/Parser.output
Terminaux inutilisés dans la grammaire

    "%="
    "comparable"
    "equivalent"
    '%'


Grammaire

    0 $accept: S $end

    1 S: imports declarations

    2 imports: %empty
    3        | imports import

    4 import: "import" CONSTANT_STRING

    5 declarations: declarations declaration
    6             | declaration

    7 declaration: "class" IDENTIFIER implements extends '{' push_environment class_definition pop_environment '}'
    8            | "class" "main" '{' push_environment class_definition pop_environment '}'
    9            | "interface" IDENTIFIER extends_public '{' push_environment interface_definition pop_environment '}'

   10 implements: %empty
   11           | "implements" class_names

   12 extends: %empty
   13        | "extends" determiner class_name

   14 extends_public: %empty
   15               | "extends" class_name

   16 class_names: class_names ',' class_name
   17            | class_name

   18 class_name: IDENTIFIER
   19           | IDENTIFIER '<' class_names '>'

   20 class_definition: %empty
   21                 | class_definition_head class_definition

   22 class_definition_head: type_definition
   23                      | const_definition
   24                      | attribute_definition
   25                      | method_definition

   26 type_definition: "type" IDENTIFIER ":=" type_expression

   27 const_definition: "const" IDENTIFIER ":=" const_expression

   28 attribute_definition: determiner IDENTIFIER ':' type_expression ';'

   29 push_environment: %empty

   30 pop_environment: %empty

   31 $@1: %empty

   32 $@2: %empty

   33 method_definition: "main" '(' args_definition ')' $@1 push_environment $@2 block pop_environment

   34 $@3: %empty

   35 $@4: %empty

   36 method_definition: determiner IDENTIFIER '(' args_definition ')' $@3 push_environment $@4 block pop_environment

   37 $@5: %empty

   38 $@6: %empty

   39 method_definition: determiner IDENTIFIER '(' args_definition ')' $@5 push_environment $@6 ';' pop_environment

   40 $@7: %empty

   41 $@8: %empty

   42 method_definition: determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@7 push_environment $@8 block pop_environment

   43 $@9: %empty

   44 $@10: %empty

   45 method_definition: determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@9 push_environment $@10 ';' pop_environment

   46 $@11: %empty

   47 $@12: %empty

   48 method_definition: determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@11 push_environment $@12 block pop_environment

   49 $@13: %empty

   50 $@14: %empty

   51 method_definition: determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@13 push_environment $@14 ';' pop_environment

   52 determiner: %empty
   53           | "private"
   54           | "public"
   55           | "protected"

   56 specifier: %empty
   57          | "virtual"
   58          | "final"

   59 interface_definition: %empty
   60                     | interface_definition_head interface_definition

   61 interface_definition_head: "procedure" IDENTIFIER '(' args_definition ')' ';'
   62                          | "function" IDENTIFIER '(' args_definition ')' ':' type_expression ';'

   63 type_expression: "char"
   64                | "integer"
   65                | "float"
   66                | "boolean"
   67                | "string"
   68                | "enum" '<' type_names '>'
   69                | "range" '<' type_expression '>'
   70                | "list" '<' type_expression '>'
   71                | "set" '<' type_expression '>'
   72                | "map" '<' type_expression ',' type_expression '>'
   73                | type_expression_class

   74 type_expression_class: IDENTIFIER '<' type_expressions '>'
   75                      | IDENTIFIER

   76 type_expressions: type_expressions ',' type_expression
   77                 | type_expression

   78 type_names: type_names ',' type_name
   79           | type_name

   80 type_name: IDENTIFIER

   81 args_definition: args_definition ',' arg_definition
   82                | arg_definition

   83 arg_definition: IDENTIFIER ':' type_expression

   84 block: '{' var_definitions stms '}'

   85 var_definitions: %empty
   86                | var_definitions var_definition

   87 var_definition: IDENTIFIER ':' type_expression ';'

   88 stms: stms stm
   89     | stm

   90 stm: simple_stm ';'
   91    | "if" '(' expression ')' stm
   92    | "if" '(' expression ')' stm "else" stm
   93    | "while" '(' expression ')' stm
   94    | "do" stm "while" '(' expression ')' ';'
   95    | "for" '(' assigned_variable ':' expression ')' stm
   96    | "for" '(' assignment_stm ';' expression ';' simple_stm ')' stm
   97    | "foreach" assigned_variable "in" expression stm
   98    | "switch" '(' expression ')' '{' case_stms '}'
   99    | block

  100 case_stms: case_stm case_stms
  101          | case_stm
  102          | default_stm

  103 case_stm: "case" expression ':' stm

  104 default_stm: "default" ':' stm

  105 assignment_stm: assigned_variable ":=" expression
  106               | IDENTIFIER ':' type_expression ":=" expression

  107 simple_stm: assignment_stm
  108           | assigned_variable "++"
  109           | assigned_variable "--"
  110           | assigned_variable "+=" expression
  111           | assigned_variable "-=" expression
  112           | assigned_variable "*=" expression
  113           | assigned_variable "/=" expression
  114           | assigned_variable "||=" expression
  115           | assigned_variable "&&=" expression
  116           | assigned_variable "&=" expression
  117           | assigned_variable "|=" expression
  118           | assigned_variable "<<=" expression
  119           | assigned_variable ">>=" expression
  120           | method_name '(' args ')'
  121           | "readln" '(' expression ')'
  122           | "write" '(' expression ')'
  123           | "writeln" '(' expression ')'
  124           | "break"
  125           | "continue"
  126           | "return" expression

  127 assigned_variable: IDENTIFIER
  128                  | IDENTIFIER '[' args ']'
  129                  | assigned_variable '.' IDENTIFIER
  130                  | "this"

  131 method_name: IDENTIFIER
  132            | assigned_variable '.' IDENTIFIER

  133 args: args ',' expression
  134     | expression

  135 const_expression: "null"
  136                 | CONSTANT_INTEGER
  137                 | CONSTANT_FLOAT
  138                 | CONSTANT_CHAR
  139                 | CONSTANT_STRING
  140                 | '[' const_expression ".." const_expression ']'

  141 expression: const_expression
  142           | assigned_variable
  143           | method_name '(' args ')'
  144           | "new" type_expression_class '(' args_opt ')'
  145           | expression "&&" expression
  146           | expression "||" expression
  147           | '!' expression
  148           | expression '<' expression
  149           | expression "<=" expression
  150           | expression '>' expression
  151           | expression ">=" expression
  152           | expression "==" expression
  153           | expression "!=" expression
  154           | expression '+' expression
  155           | expression '-' expression
  156           | '-' expression
  157           | expression '*' expression
  158           | expression '/' expression
  159           | expression "++"
  160           | expression "--"
  161           | "++" expression
  162           | "--" expression
  163           | expression '&' expression
  164           | expression '|' expression
  165           | expression "<<" expression
  166           | expression ">>" expression
  167           | '(' expression ')'

  168 args_opt: %empty
  169         | args


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '!' (33) 147
    '%' (37)
    '&' (38) 163
    '(' (40) 33 36 39 42 45 48 51 61 62 91 92 93 94 95 96 98 120 121 122 123 143 144 167
    ')' (41) 33 36 39 42 45 48 51 61 62 91 92 93 94 95 96 98 120 121 122 123 143 144 167
    '*' (42) 157
    '+' (43) 154
    ',' (44) 16 72 76 78 81 133
    '-' (45) 155 156
    '.' (46) 129 132
    '/' (47) 158
    ':' (58) 28 48 51 62 83 87 95 103 104 106
    ';' (59) 28 39 45 51 61 62 87 90 94 96
    '<' (60) 19 68 69 70 71 72 74 148
    '>' (62) 19 68 69 70 71 72 74 150
    '[' (91) 128 140
    ']' (93) 128 140
    '{' (123) 7 8 9 84 98
    '|' (124) 164
    '}' (125) 7 8 9 84 98
    error (256)
    ":=" (258) 26 27 105 106
    "+=" (259) 110
    "-=" (260) 111
    "*=" (261) 112
    "/=" (262) 113
    "%=" (263)
    "||=" (264) 114
    "&&=" (265) 115
    "&=" (266) 116
    "|=" (267) 117
    "<<=" (268) 118
    ">>=" (269) 119
    "++" (270) 108 159 161
    "--" (271) 109 160 162
    "&&" (272) 145
    "||" (273) 146
    "<<" (274) 165
    ">>" (275) 166
    ".." (276) 140
    "==" (277) 152
    "<=" (278) 149
    ">=" (279) 151
    "!=" (280) 153
    "boolean" (281) 66
    "break" (282) 124
    "case" (283) 103
    "char" (284) 63
    "class" (285) 7 8
    "comparable" (286)
    "const" (287) 27
    "continue" (288) 125
    "default" (289) 104
    "do" (290) 94
    "else" (291) 92
    "enum" (292) 68
    "equivalent" (293)
    "extends" (294) 13 15
    "final" (295) 58
    "float" (296) 65
    "for" (297) 95 96
    "foreach" (298) 97
    "function" (299) 48 51 62
    "if" (300) 91 92
    "implements" (301) 11
    "import" (302) 4
    "in" (303) 97
    "integer" (304) 64
    "interface" (305) 9
    "list" (306) 70
    "map" (307) 72
    "main" (308) 8 33
    "new" (309) 144
    "null" (310) 135
    "private" (311) 53
    "protected" (312) 55
    "public" (313) 54
    "procedure" (314) 42 45 61
    "range" (315) 69
    "readln" (316) 121
    "return" (317) 126
    "set" (318) 71
    "string" (319) 67
    "switch" (320) 98
    "this" (321) 130
    "type" (322) 26
    "virtual" (323) 57
    "write" (324) 122
    "writeln" (325) 123
    "while" (326) 93 94
    IDENTIFIER <String> (327) 7 9 18 19 26 27 28 36 39 42 45 48 51 61 62 74 75 80 83 87 106 127 128 129 131 132
    CONSTANT_STRING <String> (328) 4 139
    CONSTANT_INTEGER <Integer> (329) 136
    CONSTANT_CHAR <Integer> (330) 138
    CONSTANT_FLOAT <Float> (331) 137
    ASSIGNED_VARIABLE (332)
    WITHOUT_ELSE (333)
    DETERMINER (334)
    SPECIFIER (335)
    LEFTPLUSPLUS (336)
    LEFTMINUSMINUS (337)
    UMINUS (338)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (104)
        à gauche: 0
    type_expressions <Type> (105)
        à gauche: 76 77
        à droite: 74 76
    type_expression <Type> (106)
        à gauche: 63 64 65 66 67 68 69 70 71 72 73
        à droite: 26 28 48 51 62 69 70 71 72 76 77 83 87 106
    type_expression_class <Type> (107)
        à gauche: 74 75
        à droite: 73 144
    type_names <Type> (108)
        à gauche: 78 79
        à droite: 68 78
    type_name <Type> (109)
        à gauche: 80
        à droite: 78 79
    args_definition <Type> (110)
        à gauche: 81 82
        à droite: 33 36 39 42 45 48 51 61 62 81
    arg_definition <Type> (111)
        à gauche: 83
        à droite: 81 82
    interface_definition <Type> (112)
        à gauche: 59 60
        à droite: 9 60
    interface_definition_head <Type> (113)
        à gauche: 61 62
        à droite: 60
    class_definition <Type> (114)
        à gauche: 20 21
        à droite: 7 8 21
    class_definition_head <Type> (115)
        à gauche: 22 23 24 25
        à droite: 21
    const_definition <Type> (116)
        à gauche: 27
        à droite: 23
    attribute_definition <Type> (117)
        à gauche: 28
        à droite: 24
    method_definition <Type> (118)
        à gauche: 33 36 39 42 45 48 51
        à droite: 25
    const_expression <Stree> (119)
        à gauche: 135 136 137 138 139 140
        à droite: 27 140 141
    expression <Stree> (120)
        à gauche: 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167
        à droite: 91 92 93 94 95 96 97 98 103 105 106 110 111 112 113 114 115 116 117 118 119 121 122 123 126 133 134 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167
    assigned_variable <Stree> (121)
        à gauche: 127 128 129 130
        à droite: 95 97 105 108 109 110 111 112 113 114 115 116 117 118 119 129 132 142
    args <Stree> (122)
        à gauche: 133 134
        à droite: 120 128 133 143 169
    args_opt <Stree> (123)
        à gauche: 168 169
        à droite: 144
    method_name <Stree> (124)
        à gauche: 131 132
        à droite: 120 143
    block <Stree> (125)
        à gauche: 84
        à droite: 33 36 42 48 99
    stms <Stree> (126)
        à gauche: 88 89
        à droite: 84 88
    stm <Stree> (127)
        à gauche: 90 91 92 93 94 95 96 97 98 99
        à droite: 88 89 91 92 93 94 95 96 97 103 104
    simple_stm <Stree> (128)
        à gauche: 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126
        à droite: 90 96
    assignment_stm <Stree> (129)
        à gauche: 105 106
        à droite: 96 107
    case_stms <Stree> (130)
        à gauche: 100 101 102
        à droite: 98 100
    case_stm <Stree> (131)
        à gauche: 103
        à droite: 100 101
    default_stm <Stree> (132)
        à gauche: 104
        à droite: 102
    S (133)
        à gauche: 1
        à droite: 0
    imports (134)
        à gauche: 2 3
        à droite: 1 3
    import (135)
        à gauche: 4
        à droite: 3
    declarations (136)
        à gauche: 5 6
        à droite: 1 5
    declaration (137)
        à gauche: 7 8 9
        à droite: 5 6
    implements (138)
        à gauche: 10 11
        à droite: 7
    extends (139)
        à gauche: 12 13
        à droite: 7
    extends_public (140)
        à gauche: 14 15
        à droite: 9
    class_names (141)
        à gauche: 16 17
        à droite: 11 16 19
    class_name (142)
        à gauche: 18 19
        à droite: 13 15 16 17
    type_definition (143)
        à gauche: 26
        à droite: 22
    push_environment (144)
        à gauche: 29
        à droite: 7 8 9 33 36 39 42 45 48 51
    pop_environment (145)
        à gauche: 30
        à droite: 7 8 9 33 36 39 42 45 48 51
    $@1 (146)
        à gauche: 31
        à droite: 33
    $@2 (147)
        à gauche: 32
        à droite: 33
    $@3 (148)
        à gauche: 34
        à droite: 36
    $@4 (149)
        à gauche: 35
        à droite: 36
    $@5 (150)
        à gauche: 37
        à droite: 39
    $@6 (151)
        à gauche: 38
        à droite: 39
    $@7 (152)
        à gauche: 40
        à droite: 42
    $@8 (153)
        à gauche: 41
        à droite: 42
    $@9 (154)
        à gauche: 43
        à droite: 45
    $@10 (155)
        à gauche: 44
        à droite: 45
    $@11 (156)
        à gauche: 46
        à droite: 48
    $@12 (157)
        à gauche: 47
        à droite: 48
    $@13 (158)
        à gauche: 49
        à droite: 51
    $@14 (159)
        à gauche: 50
        à droite: 51
    determiner (160)
        à gauche: 52 53 54 55
        à droite: 13 28 36 39 42 45 48 51
    specifier (161)
        à gauche: 56 57 58
        à droite: 42 45 48 51
    var_definitions (162)
        à gauche: 85 86
        à droite: 84 86
    var_definition (163)
        à gauche: 87
        à droite: 86


État 0

    0 $accept: • S $end
    1 S: • imports declarations
    2 imports: • %empty
    3        | • imports import

    $défaut  réduction par utilisation de la règle 2 (imports)

    S        aller à l'état 1
    imports  aller à l'état 2


État 1

    0 $accept: S • $end

    $end  décalage et aller à l'état 3


État 2

    1 S: imports • declarations
    3 imports: imports • import
    4 import: • "import" CONSTANT_STRING
    5 declarations: • declarations declaration
    6             | • declaration
    7 declaration: • "class" IDENTIFIER implements extends '{' push_environment class_definition pop_environment '}'
    8            | • "class" "main" '{' push_environment class_definition pop_environment '}'
    9            | • "interface" IDENTIFIER extends_public '{' push_environment interface_definition pop_environment '}'

    "class"      décalage et aller à l'état 4
    "import"     décalage et aller à l'état 5
    "interface"  décalage et aller à l'état 6

    import        aller à l'état 7
    declarations  aller à l'état 8
    declaration   aller à l'état 9


État 3

    0 $accept: S $end •

    $défaut  accepter


État 4

    7 declaration: "class" • IDENTIFIER implements extends '{' push_environment class_definition pop_environment '}'
    8            | "class" • "main" '{' push_environment class_definition pop_environment '}'

    "main"      décalage et aller à l'état 10
    IDENTIFIER  décalage et aller à l'état 11


État 5

    4 import: "import" • CONSTANT_STRING

    CONSTANT_STRING  décalage et aller à l'état 12


État 6

    9 declaration: "interface" • IDENTIFIER extends_public '{' push_environment interface_definition pop_environment '}'

    IDENTIFIER  décalage et aller à l'état 13


État 7

    3 imports: imports import •

    $défaut  réduction par utilisation de la règle 3 (imports)


État 8

    1 S: imports declarations •
    5 declarations: declarations • declaration
    7 declaration: • "class" IDENTIFIER implements extends '{' push_environment class_definition pop_environment '}'
    8            | • "class" "main" '{' push_environment class_definition pop_environment '}'
    9            | • "interface" IDENTIFIER extends_public '{' push_environment interface_definition pop_environment '}'

    "class"      décalage et aller à l'état 4
    "interface"  décalage et aller à l'état 6

    $défaut  réduction par utilisation de la règle 1 (S)

    declaration  aller à l'état 14


État 9

    6 declarations: declaration •

    $défaut  réduction par utilisation de la règle 6 (declarations)


État 10

    8 declaration: "class" "main" • '{' push_environment class_definition pop_environment '}'

    '{'  décalage et aller à l'état 15


État 11

    7 declaration: "class" IDENTIFIER • implements extends '{' push_environment class_definition pop_environment '}'
   10 implements: • %empty
   11           | • "implements" class_names

    "implements"  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 10 (implements)

    implements  aller à l'état 17


État 12

    4 import: "import" CONSTANT_STRING •

    $défaut  réduction par utilisation de la règle 4 (import)


État 13

    9 declaration: "interface" IDENTIFIER • extends_public '{' push_environment interface_definition pop_environment '}'
   14 extends_public: • %empty
   15               | • "extends" class_name

    "extends"  décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 14 (extends_public)

    extends_public  aller à l'état 19


État 14

    5 declarations: declarations declaration •

    $défaut  réduction par utilisation de la règle 5 (declarations)


État 15

    8 declaration: "class" "main" '{' • push_environment class_definition pop_environment '}'
   29 push_environment: • %empty

    $défaut  réduction par utilisation de la règle 29 (push_environment)

    push_environment  aller à l'état 20


État 16

   11 implements: "implements" • class_names
   16 class_names: • class_names ',' class_name
   17            | • class_name
   18 class_name: • IDENTIFIER
   19           | • IDENTIFIER '<' class_names '>'

    IDENTIFIER  décalage et aller à l'état 21

    class_names  aller à l'état 22
    class_name   aller à l'état 23


État 17

    7 declaration: "class" IDENTIFIER implements • extends '{' push_environment class_definition pop_environment '}'
   12 extends: • %empty
   13        | • "extends" determiner class_name

    "extends"  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 12 (extends)

    extends  aller à l'état 25


État 18

   15 extends_public: "extends" • class_name
   18 class_name: • IDENTIFIER
   19           | • IDENTIFIER '<' class_names '>'

    IDENTIFIER  décalage et aller à l'état 21

    class_name  aller à l'état 26


État 19

    9 declaration: "interface" IDENTIFIER extends_public • '{' push_environment interface_definition pop_environment '}'

    '{'  décalage et aller à l'état 27


État 20

    8 declaration: "class" "main" '{' push_environment • class_definition pop_environment '}'
   20 class_definition: • %empty
   21                 | • class_definition_head class_definition
   22 class_definition_head: • type_definition
   23                      | • const_definition
   24                      | • attribute_definition
   25                      | • method_definition
   26 type_definition: • "type" IDENTIFIER ":=" type_expression
   27 const_definition: • "const" IDENTIFIER ":=" const_expression
   28 attribute_definition: • determiner IDENTIFIER ':' type_expression ';'
   33 method_definition: • "main" '(' args_definition ')' $@1 push_environment $@2 block pop_environment
   36                  | • determiner IDENTIFIER '(' args_definition ')' $@3 push_environment $@4 block pop_environment
   39                  | • determiner IDENTIFIER '(' args_definition ')' $@5 push_environment $@6 ';' pop_environment
   42                  | • determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@7 push_environment $@8 block pop_environment
   45                  | • determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@9 push_environment $@10 ';' pop_environment
   48                  | • determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@11 push_environment $@12 block pop_environment
   51                  | • determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@13 push_environment $@14 ';' pop_environment
   52 determiner: • %empty
   53           | • "private"
   54           | • "public"
   55           | • "protected"

    "const"      décalage et aller à l'état 28
    "main"       décalage et aller à l'état 29
    "private"    décalage et aller à l'état 30
    "protected"  décalage et aller à l'état 31
    "public"     décalage et aller à l'état 32
    "type"       décalage et aller à l'état 33

    '}'      réduction par utilisation de la règle 20 (class_definition)
    $défaut  réduction par utilisation de la règle 52 (determiner)

    class_definition       aller à l'état 34
    class_definition_head  aller à l'état 35
    const_definition       aller à l'état 36
    attribute_definition   aller à l'état 37
    method_definition      aller à l'état 38
    type_definition        aller à l'état 39
    determiner             aller à l'état 40


État 21

   18 class_name: IDENTIFIER •
   19           | IDENTIFIER • '<' class_names '>'

    '<'  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 18 (class_name)


État 22

   11 implements: "implements" class_names •
   16 class_names: class_names • ',' class_name

    ','  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 11 (implements)


État 23

   17 class_names: class_name •

    $défaut  réduction par utilisation de la règle 17 (class_names)


État 24

   13 extends: "extends" • determiner class_name
   52 determiner: • %empty
   53           | • "private"
   54           | • "public"
   55           | • "protected"

    "private"    décalage et aller à l'état 30
    "protected"  décalage et aller à l'état 31
    "public"     décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 52 (determiner)

    determiner  aller à l'état 43


État 25

    7 declaration: "class" IDENTIFIER implements extends • '{' push_environment class_definition pop_environment '}'

    '{'  décalage et aller à l'état 44


État 26

   15 extends_public: "extends" class_name •

    $défaut  réduction par utilisation de la règle 15 (extends_public)


État 27

    9 declaration: "interface" IDENTIFIER extends_public '{' • push_environment interface_definition pop_environment '}'
   29 push_environment: • %empty

    $défaut  réduction par utilisation de la règle 29 (push_environment)

    push_environment  aller à l'état 45


État 28

   27 const_definition: "const" • IDENTIFIER ":=" const_expression

    IDENTIFIER  décalage et aller à l'état 46


État 29

   33 method_definition: "main" • '(' args_definition ')' $@1 push_environment $@2 block pop_environment

    '('  décalage et aller à l'état 47


État 30

   53 determiner: "private" •

    $défaut  réduction par utilisation de la règle 53 (determiner)


État 31

   55 determiner: "protected" •

    $défaut  réduction par utilisation de la règle 55 (determiner)


État 32

   54 determiner: "public" •

    $défaut  réduction par utilisation de la règle 54 (determiner)


État 33

   26 type_definition: "type" • IDENTIFIER ":=" type_expression

    IDENTIFIER  décalage et aller à l'état 48


État 34

    8 declaration: "class" "main" '{' push_environment class_definition • pop_environment '}'
   30 pop_environment: • %empty

    $défaut  réduction par utilisation de la règle 30 (pop_environment)

    pop_environment  aller à l'état 49


État 35

   20 class_definition: • %empty
   21                 | • class_definition_head class_definition
   21                 | class_definition_head • class_definition
   22 class_definition_head: • type_definition
   23                      | • const_definition
   24                      | • attribute_definition
   25                      | • method_definition
   26 type_definition: • "type" IDENTIFIER ":=" type_expression
   27 const_definition: • "const" IDENTIFIER ":=" const_expression
   28 attribute_definition: • determiner IDENTIFIER ':' type_expression ';'
   33 method_definition: • "main" '(' args_definition ')' $@1 push_environment $@2 block pop_environment
   36                  | • determiner IDENTIFIER '(' args_definition ')' $@3 push_environment $@4 block pop_environment
   39                  | • determiner IDENTIFIER '(' args_definition ')' $@5 push_environment $@6 ';' pop_environment
   42                  | • determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@7 push_environment $@8 block pop_environment
   45                  | • determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@9 push_environment $@10 ';' pop_environment
   48                  | • determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@11 push_environment $@12 block pop_environment
   51                  | • determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@13 push_environment $@14 ';' pop_environment
   52 determiner: • %empty
   53           | • "private"
   54           | • "public"
   55           | • "protected"

    "const"      décalage et aller à l'état 28
    "main"       décalage et aller à l'état 29
    "private"    décalage et aller à l'état 30
    "protected"  décalage et aller à l'état 31
    "public"     décalage et aller à l'état 32
    "type"       décalage et aller à l'état 33

    '}'      réduction par utilisation de la règle 20 (class_definition)
    $défaut  réduction par utilisation de la règle 52 (determiner)

    class_definition       aller à l'état 50
    class_definition_head  aller à l'état 35
    const_definition       aller à l'état 36
    attribute_definition   aller à l'état 37
    method_definition      aller à l'état 38
    type_definition        aller à l'état 39
    determiner             aller à l'état 40


État 36

   23 class_definition_head: const_definition •

    $défaut  réduction par utilisation de la règle 23 (class_definition_head)


État 37

   24 class_definition_head: attribute_definition •

    $défaut  réduction par utilisation de la règle 24 (class_definition_head)


État 38

   25 class_definition_head: method_definition •

    $défaut  réduction par utilisation de la règle 25 (class_definition_head)


État 39

   22 class_definition_head: type_definition •

    $défaut  réduction par utilisation de la règle 22 (class_definition_head)


État 40

   28 attribute_definition: determiner • IDENTIFIER ':' type_expression ';'
   36 method_definition: determiner • IDENTIFIER '(' args_definition ')' $@3 push_environment $@4 block pop_environment
   39                  | determiner • IDENTIFIER '(' args_definition ')' $@5 push_environment $@6 ';' pop_environment
   42                  | determiner • specifier "procedure" IDENTIFIER '(' args_definition ')' $@7 push_environment $@8 block pop_environment
   45                  | determiner • specifier "procedure" IDENTIFIER '(' args_definition ')' $@9 push_environment $@10 ';' pop_environment
   48                  | determiner • specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@11 push_environment $@12 block pop_environment
   51                  | determiner • specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@13 push_environment $@14 ';' pop_environment
   56 specifier: • %empty
   57          | • "virtual"
   58          | • "final"

    "final"     décalage et aller à l'état 51
    "virtual"   décalage et aller à l'état 52
    IDENTIFIER  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 56 (specifier)

    specifier  aller à l'état 54


État 41

   16 class_names: • class_names ',' class_name
   17            | • class_name
   18 class_name: • IDENTIFIER
   19           | • IDENTIFIER '<' class_names '>'
   19           | IDENTIFIER '<' • class_names '>'

    IDENTIFIER  décalage et aller à l'état 21

    class_names  aller à l'état 55
    class_name   aller à l'état 23


État 42

   16 class_names: class_names ',' • class_name
   18 class_name: • IDENTIFIER
   19           | • IDENTIFIER '<' class_names '>'

    IDENTIFIER  décalage et aller à l'état 21

    class_name  aller à l'état 56


État 43

   13 extends: "extends" determiner • class_name
   18 class_name: • IDENTIFIER
   19           | • IDENTIFIER '<' class_names '>'

    IDENTIFIER  décalage et aller à l'état 21

    class_name  aller à l'état 57


État 44

    7 declaration: "class" IDENTIFIER implements extends '{' • push_environment class_definition pop_environment '}'
   29 push_environment: • %empty

    $défaut  réduction par utilisation de la règle 29 (push_environment)

    push_environment  aller à l'état 58


État 45

    9 declaration: "interface" IDENTIFIER extends_public '{' push_environment • interface_definition pop_environment '}'
   59 interface_definition: • %empty
   60                     | • interface_definition_head interface_definition
   61 interface_definition_head: • "procedure" IDENTIFIER '(' args_definition ')' ';'
   62                          | • "function" IDENTIFIER '(' args_definition ')' ':' type_expression ';'

    "function"   décalage et aller à l'état 59
    "procedure"  décalage et aller à l'état 60

    $défaut  réduction par utilisation de la règle 59 (interface_definition)

    interface_definition       aller à l'état 61
    interface_definition_head  aller à l'état 62


État 46

   27 const_definition: "const" IDENTIFIER • ":=" const_expression

    ":="  décalage et aller à l'état 63


État 47

   33 method_definition: "main" '(' • args_definition ')' $@1 push_environment $@2 block pop_environment
   81 args_definition: • args_definition ',' arg_definition
   82                | • arg_definition
   83 arg_definition: • IDENTIFIER ':' type_expression

    IDENTIFIER  décalage et aller à l'état 64

    args_definition  aller à l'état 65
    arg_definition   aller à l'état 66


État 48

   26 type_definition: "type" IDENTIFIER • ":=" type_expression

    ":="  décalage et aller à l'état 67


État 49

    8 declaration: "class" "main" '{' push_environment class_definition pop_environment • '}'

    '}'  décalage et aller à l'état 68


État 50

   21 class_definition: class_definition_head class_definition •

    $défaut  réduction par utilisation de la règle 21 (class_definition)


État 51

   58 specifier: "final" •

    $défaut  réduction par utilisation de la règle 58 (specifier)


État 52

   57 specifier: "virtual" •

    $défaut  réduction par utilisation de la règle 57 (specifier)


État 53

   28 attribute_definition: determiner IDENTIFIER • ':' type_expression ';'
   36 method_definition: determiner IDENTIFIER • '(' args_definition ')' $@3 push_environment $@4 block pop_environment
   39                  | determiner IDENTIFIER • '(' args_definition ')' $@5 push_environment $@6 ';' pop_environment

    ':'  décalage et aller à l'état 69
    '('  décalage et aller à l'état 70


État 54

   42 method_definition: determiner specifier • "procedure" IDENTIFIER '(' args_definition ')' $@7 push_environment $@8 block pop_environment
   45                  | determiner specifier • "procedure" IDENTIFIER '(' args_definition ')' $@9 push_environment $@10 ';' pop_environment
   48                  | determiner specifier • "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@11 push_environment $@12 block pop_environment
   51                  | determiner specifier • "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@13 push_environment $@14 ';' pop_environment

    "function"   décalage et aller à l'état 71
    "procedure"  décalage et aller à l'état 72


État 55

   16 class_names: class_names • ',' class_name
   19 class_name: IDENTIFIER '<' class_names • '>'

    '>'  décalage et aller à l'état 73
    ','  décalage et aller à l'état 42


État 56

   16 class_names: class_names ',' class_name •

    $défaut  réduction par utilisation de la règle 16 (class_names)


État 57

   13 extends: "extends" determiner class_name •

    $défaut  réduction par utilisation de la règle 13 (extends)


État 58

    7 declaration: "class" IDENTIFIER implements extends '{' push_environment • class_definition pop_environment '}'
   20 class_definition: • %empty
   21                 | • class_definition_head class_definition
   22 class_definition_head: • type_definition
   23                      | • const_definition
   24                      | • attribute_definition
   25                      | • method_definition
   26 type_definition: • "type" IDENTIFIER ":=" type_expression
   27 const_definition: • "const" IDENTIFIER ":=" const_expression
   28 attribute_definition: • determiner IDENTIFIER ':' type_expression ';'
   33 method_definition: • "main" '(' args_definition ')' $@1 push_environment $@2 block pop_environment
   36                  | • determiner IDENTIFIER '(' args_definition ')' $@3 push_environment $@4 block pop_environment
   39                  | • determiner IDENTIFIER '(' args_definition ')' $@5 push_environment $@6 ';' pop_environment
   42                  | • determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@7 push_environment $@8 block pop_environment
   45                  | • determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@9 push_environment $@10 ';' pop_environment
   48                  | • determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@11 push_environment $@12 block pop_environment
   51                  | • determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@13 push_environment $@14 ';' pop_environment
   52 determiner: • %empty
   53           | • "private"
   54           | • "public"
   55           | • "protected"

    "const"      décalage et aller à l'état 28
    "main"       décalage et aller à l'état 29
    "private"    décalage et aller à l'état 30
    "protected"  décalage et aller à l'état 31
    "public"     décalage et aller à l'état 32
    "type"       décalage et aller à l'état 33

    '}'      réduction par utilisation de la règle 20 (class_definition)
    $défaut  réduction par utilisation de la règle 52 (determiner)

    class_definition       aller à l'état 74
    class_definition_head  aller à l'état 35
    const_definition       aller à l'état 36
    attribute_definition   aller à l'état 37
    method_definition      aller à l'état 38
    type_definition        aller à l'état 39
    determiner             aller à l'état 40


État 59

   62 interface_definition_head: "function" • IDENTIFIER '(' args_definition ')' ':' type_expression ';'

    IDENTIFIER  décalage et aller à l'état 75


État 60
